--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,6 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 add_executable(vision src/vision.cpp)
 find_package( OpenCV REQUIRED )
 target_link_libraries(vision ${OpenCV_LIBS} ${catkin_LIBRARIES})
-add_dependencies(vision beginner_tutorials_generate_messages_cpp)
 
-##add_executable(listener src/Robot/listener.cpp)
-##target_link_libraries(listener ${catkin_LIBRARIES})
-##add_dependencies(listener beginner_tutorials_generate_messages_cpp)
+add_executable(home src/home.cpp src/motorControl.cpp)
+target_link_libraries(home ${catkin_LIBRARIES})
