Fix message dependencies.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,12 @@ include_directories(include ${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS} ${GAZEBO
 
 # Declare C++ executables
 add_executable(vision src/vision.cpp)
+add_dependencies(vision walle_generate_messages_cpp)
 find_package( OpenCV REQUIRED )
 target_link_libraries(vision ${OpenCV_LIBS} ${catkin_LIBRARIES})
 
 add_executable(controller src/controller.cpp)
+add_dependencies(controller walle_generate_messages_cpp)
 target_link_libraries(controller ${catkin_LIBRARIES})
 
 # Add plugins
