--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>walle</name>
+  <name>soccersim</name>
   <version>0.0.0</version>
-  <description>The walle package</description>
+  <description>The soccersim package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/walle</url> -->
+  <!-- <url type="website">http://wiki.ros.org/soccersim</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
@@ -42,13 +42,17 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
-  <build_depend>gazebo_ros</build_depend>  
+  <build_depend>gazebo_ros</build_depend>
+  <build_depend>std_srvs</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>geometry_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
-  <run_depend>gazebo_ros</run_depend>  
+  <run_depend>gazebo_ros</run_depend>
+  <run_depend>std_srvs</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
