--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,20 +49,5 @@ add_library(soccer_ball plugins/soccer_ball.cpp)
 target_link_libraries(soccer_ball ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES})
 
 # Generate .world files from .world.xacro files
-
-# Xacro files
-file(GLOB xacro_files ${CMAKE_CURRENT_SOURCE_DIR}/worlds/*.world.xacro)
-
-foreach(it ${xacro_files})
-  # remove .xacro extension
-  string(REGEX MATCH "(.*)[.]xacro$" unused ${it})
-  set(output_filename ${CMAKE_MATCH_1})
-
-  # create a rule to generate ${output_filename} from {it}
-  xacro_add_xacro_file(${it} ${output_filename})
-
-  list(APPEND world_files ${output_filename})
-endforeach(it)
-
-# add an abstract target to actually trigger the builds
-add_custom_target(media_files ALL DEPENDS ${world_files})
+file(GLOB xacro_files worlds/*.world.xacro)
+xacro_add_files(${xacro_files} TARGET media_files INORDER)
