--- a/package.xml
+++ b/package.xml
@@ -46,6 +46,7 @@
   <build_depend>message_generation</build_depend>
   <build_depend>gazebo_ros</build_depend>
   <build_depend>std_srvs</build_depend>
+  <build_depend>soccer_ref</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
@@ -53,6 +54,7 @@
   <run_depend>message_runtime</run_depend>
   <run_depend>gazebo_ros</run_depend>
   <run_depend>std_srvs</run_depend>
+  <run_depend>soccer_ref</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
